playlist service initial structure

--- a/playlist/src/main/resources/application.properties
+++ b/playlist/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-# ===============================
-# = DATA SOURCE
-# ===============================
-
-# Set here configurations for the database connection
+server.port=8081
+server.servlet.context-path=/api
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:sqlite:MyMusic.db
+spring.datasource.url = jdbc:sqlite:../MyMusic.db
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Username and password
 spring.datasource.username =
@@ -19,4 +16,5 @@ spring.jpa.show-sql = true
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.datasource.driver-class-name = org.sqlite.JDBC
-spring.jpa.database-platform=com.handson.sqllite.config.SQLiteDialect
+spring.jpa.database-platform=br.com.ciandt.playlist.config.SQLiteDialect
+
