create feature add music to playlist

--- a/playlist/src/main/resources/application.properties
+++ b/playlist/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 server.servlet.context-path=/api
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:sqlite:../MyMusic.db
+spring.datasource.url = jdbc:sqlite:MyMusic.db
 
 spring.jpa.hibernate.ddl-auto=none
 
