--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
             allowedOrigins: "http://localhost:3000"
             allowedMethods:
             - GET
+            - POST
+            - PUT
+            - DELETE
       routes:
         - id: playlists
           uri: 'http://localhost:8081'
